# AIML08-Emotional_Intelligence

./: .gitignore  readme.md
Backend/: llm_chain.py  main.py  pyproject.toml  workflow.py
Backend/src/: main.py  workflow.py
Frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/: AnimatedBackground.tsx  AppLayout.tsx  BottomNav.tsx  EmotionIndicator.tsx  FloatingParticles.tsx  Navbar.tsx  PageTransition.tsx  PomodoroTimer.tsx  TypingIndicator.tsx
Frontend/src/components/ui/: sonner.tsx  toast.tsx
Frontend/src/pages/: Chat.tsx  Dashboard.tsx  HomePage.tsx  Index.tsx
ML/: ModalTraning.ipynb  pyproject.toml
